--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,7 +15,9 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+.uppy-Dashboard-inner {
+  margin: 0 auto;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
